Refactor cleaning process to categorize responses as `Included` or `Excluded`

--- a/features/cleaning-and-review.mdx
+++ b/features/cleaning-and-review.mdx
@@ -47,7 +47,7 @@ Here's an overview of the defaults settings:
 To customize the cleaning process, you can create your own custom cleaning settings by defining specific thresholds for each quality check. This allows you to tailor the cleaning criteria to suit your unique requirements, ensuring more precise and relevant results.
 
 ## What is the outcome of the cleaning process?
-The cleaning process categorizes each response as either Included or Excluded, with clear reasons provided for any exclusions. This ensures transparency and helps identify areas that may need further attention or adjustments.
+The cleaning process categorizes each response as either `Included` or `Excluded`, with clear reasons provided for any exclusions. This ensures transparency and helps identify areas that may need further attention or adjustments.
 
 Set of Reasons for Exclusion:
 - `ReDem Score Threshold`: The respondent's ReDem score is below than default threshold.
