--- a/account-setup.mdx
+++ b/account-setup.mdx
@@ -6,10 +6,13 @@ iconType: "regular"
 ---
 
 ## Sign Up and Get Started
-To start using ReDem, create your account. <br/> Setting up your account is quick and easy. Here’s how to get started:
 
-1. Go to the [ReDem homepage](https://redem.io) and click on the "Sign up" button.
+To start using ReDem, create your account. <br /> Setting up your account is quick and easy. Here’s how to get started:
+
+1. Go to the [ReDemsd homepage](https://redem.io) and click on the "Sign up" button.
+
 2. Fill in your email, choose a password, and provide your company information
+
 3. Click “Create Account” to complete the signup process.
 
 Once your account is successfully created, our business development team will review your account and get everything ready for you.
@@ -17,7 +20,9 @@ Once your account is successfully created, our business development team will re
 You’ll then receive an email with an activation link. Just click the link to activate your account, and you’ll be ready to dive in and start using ReDem! 🎊
 
 ## Want to learn more?
+
 [Book a demo](https://meetings.hubspot.com/j-redem/get-to-know-redem) with our founding team to explore how ReDem can elevate your workflow!
 
-<br/>
-**We’re thrilled to have you join the ReDem community!** <br/> From day one, we’re here to make sure you have everything you need for a smooth and successful experience.
+<br />
+
+**We’re thrilled to have you join the ReDem community!** <br /> From day one, we’re here to make sure you have everything you need for a smooth and successful experience.
