Documentation edits made through Mintlify web editor

--- a/welcome.mdx
+++ b/welcome.mdx
@@ -7,7 +7,7 @@ iconType: "regular"
 
 ![](/images/documentation-hero.png)
 
-Welcome to ReDem®—your comprehensive solution for ensuring the highest quality in survey data. Our platform leverages advanced AI technology to automate the quality control and cleaning of survey responses, empowering organizations to make informed decisions based on reliable data.
+Our platform leverages advanced AI technology to automate the quality control and cleaning of survey responses, empowering organizations to make informed decisions based on reliable data.
 
 The ReDem product documentation provides a comprehensive guide to understanding how ReDem works and how you can use it.
 
