Documentation edits made through Mintlify web editor

--- a/welcome.mdx
+++ b/welcome.mdx
@@ -13,7 +13,7 @@ The ReDem product documentation provides a comprehensive guide to understanding 
 
 ## New to ReDem?
 
-If you're new to ReDem, a great place to start is by [setting up your account](/account-setup). Follow these steps to get started and prepare for your data quality journey with ReDem!
+If you're new to ReDem, start by [setting up your account](/account-setup). Simply follow these steps to begin your journey toward better data quality!
 
 ## Learn how ReDem works
 
