--- a/welcome.mdx
+++ b/welcome.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Welcome"
-description: "Welcome to the ReDem product documentation"
+description: "Welcome to the ReDem's User Guide"
 icon: "hand-wave"
 iconType: "regular"
 ---
