Documentation edits made through Mintlify web editor

--- a/how-it-works.mdx
+++ b/how-it-works.mdx
@@ -15,7 +15,7 @@ ReDem ensures data quality at every stage, from survey design to final data outp
   </Step>
 
   <Step title="Import data">
-    Data can be quickly and easily uploaded as an Excel file or imported in real time via an integration with the survey software.
+    Data quality checks can be conducted in real time using our API or directly within survey software where ReDem is integrated. Alternatively, data can be quickly and easily uploaded via an Excel file in the ReDem application.
 
     **🔥 Start by importing your first survey data:**
 
