--- a/how-it-works.mdx
+++ b/how-it-works.mdx
@@ -9,7 +9,7 @@ ReDem ensures data quality at every stage, from survey design to final data outp
 
 <Steps titleSize="h3">
   <Step title="Prepare questionnaire">
-    <p> Standardized items for quality checks are added to the questionnaire and the survey can start. </p>
+    Advise is given how to strategically design the questionnaires in order to maximize the effectiveness in fraud detection.
 
     <Card title="Learn more about the ReDem recommended criteria for questionnaires" icon="clipboard-check" href="/miscellaneous/questionnaire-criteria" horizontal />
   </Step>
