--- a/account-setup.mdx
+++ b/account-setup.mdx
@@ -1,28 +1,24 @@
 ---
-title: 'Account Setup'
-description: 'Join ReDem and get started today'
+title: "Account Setup"
+description: "Join ReDem and get started today. "
 icon: "rocket"
 iconType: "regular"
 ---
 
 ## Sign Up and Get Started
 
-To start using ReDem, create your account. <br /> Setting up your account is quick and easy. Here’s how to get started:
+Get started with ReDem by creating your account. The setup is fast and straightforward - follow these steps to begin:
 
-1. Go to the [ReDemsd homepage](https://redem.io) and click on the "Sign up" button.
+1. Go to the [registration page ](https://app.redem.io/register).
 
-2. Fill in your email, choose a password, and provide your company information
+2. Fill in your organization's name, your first and last name, Email and choose a password.
 
-3. Click “Create Account” to complete the signup process.
+3. Click “Register now for free” to complete the registration process.
 
-Once your account is successfully created, our business development team will review your account and get everything ready for you.
-
-You’ll then receive an email with an activation link. Just click the link to activate your account, and you’ll be ready to dive in and start using ReDem! 🎊
+We will then contact you to find out about your preferred [subscription](https://redem.io/en/pricing/). After it is booked, you’ll receive an email with an activation link. Click the link to activate your account and start using ReDem right away! 🎊
 
 ## Want to learn more?
 
 [Book a demo](https://meetings.hubspot.com/j-redem/get-to-know-redem) with our founding team to explore how ReDem can elevate your workflow!
 
-<br />
-
-**We’re thrilled to have you join the ReDem community!** <br /> From day one, we’re here to make sure you have everything you need for a smooth and successful experience.
+**We’re thrilled to have you join the ReDem community!**  From day one, we’re here to make sure you have everything you need for a smooth and successful experience.
