Documentation edits made through Mintlify web editor

--- a/miscellaneous/questionnaire-criteria.mdx
+++ b/miscellaneous/questionnaire-criteria.mdx
@@ -1,13 +1,15 @@
 ---
-title: "Crafting Questionnaires to Unlock the Full Power of Technological Fraud Detection"
+title: "Questionnaires to Unlock the Power of ReDem"
 description: "Enhance fraud detection in online surveys with strategic design to maximize the effectiveness of ReDem"
 icon: "clipboard-check"
 iconType: "regular"
 ---
 
-Learn how to enhance fraud detection in online surveys by strategically designing questionnaires with open-ended, grid, and trap questions that maximize the effectiveness of our advanced technological quality checks.
+Learn how to enhance fraud detection in online surveys by strategically designing questionnaires that maximize the effectiveness of our advanced technological quality checks.
 
-If your questionnaire doesn’t meet these criteria, consider enhancing it for better results. Open-ended questions are particularly effective for ensuring data quality. We recommend to use at least **two mandatory open-ended questions** that all respondents must answer. The open-ended questions can be added for quality control purposes only and do not need to be evaluated.
+If your questionnaire doesn’t meet these criteria, consider enhancing it for better results.&#x20;
+
+Open-ended questions are particularly effective for ensuring data quality. We recommend to use at least **two mandatory open-ended questions** that all respondents must answer. The open-ended questions can be added for quality control purposes only and do not need to be evaluated.
 
 ### Open-Ended Questions
 
