Documentation edits made through Mintlify web editor

--- a/quality-checks/coherence-score.mdx
+++ b/quality-checks/coherence-score.mdx
@@ -1,6 +1,10 @@
 ---
-title: 'Coherence Score'
-description: 'Learn how the Coherence Score calculates'
+title: "Coherence Score"
+description: " Discover how the Coherence Score uncovers professional fraud that often goes undetected"
 icon: "grid-2-plus"
 iconType: "regular"
 ---
+
+The coherence score is an AI-driven metric that evaluates the plausibility and logical consistency of responses throughout an entire interview, from screening questions to socio-demographics. This highly robust quality check detects contradictions and inconsistencies, making manipulation nearly impossible. Unlike traditional trap questions—which fraudsters and AI bots can easily identify—the Coherence Score is a game-changer in fraud detection. It works seamlessly within regular questionnaires, identifying inconsistencies without relying on special questions. For example, it can flag contradictions, like a respondent claiming regular subway use while living in a city without one.
+
+Additionally, the Coherence Score minimizes false positives by avoiding the disqualification of respondents who may have misclicked or momentarily lost focus but otherwise performed acceptably. This innovative approach not only enhances fraud detection but also ensures more accurate and fair assessments.
