Documentation edits made through Mintlify web editor

--- a/quality-checks/redem-score.mdx
+++ b/quality-checks/redem-score.mdx
@@ -1,28 +1,33 @@
 ---
-title: ReDem Score
-description: 'Learn about the ReDem Score and how it is calculated'
+title: "ReDem Score"
+description: "Discover the ReDem Total Quality Score and its dimensions."
 icon: "hundred-points"
 iconType: "regular"
 ---
 
 ## 360-degree data quality assessment
-Interviews undergo a comprehensive series of quality checks. The results are consolidated into the ReDem® Score (R-Score), which combines all relevant quality criteria and provides a transparent, objective assessment of the data quality in your survey responses.
 
-<img className="hidden dark:block" src="/images/Quality-Checks-Dark.png" />
-<img className="block dark:hidden" src="/images/Quality-Checks.png" />
+At the core of ReDem lies a 360-degree approach, enabling us to analyze interviews from every possible perspective. Each interview undergoes rigorous quality checks, culminating in the ReDem Score (R-Score). This score integrates all relevant quality criteria, offering a transparent and objective assessment of data quality in survey responses. With ReDem, every questionnaire becomes a sophisticated web of safeguards, making it nearly impossible for fraudsters to go undetected.
 
-### Quality checks are conducted based on the following key criteria:
+<img classname="hidden dark:block" src="/images/Quality-Checks-Dark.png" />
+
+<img classname="block dark:hidden" src="/images/Quality-Checks.png" />
+
+### The four dimensions of the ReDem Score:
 
 <CardGroup cols={2}>
   <Card title="Open-Ended Score" icon="messages" href="/quality-checks/open-ended-score">
-    The Open-Ended Score (OES) is an AI-based check of written answers to open-ended questions. It controls for:
+    The Open-Ended Score (OES) is an AI-powered assessment of the quality of responses to open-ended questions.
   </Card>
+
   <Card title="Coherence Score" icon="grid-2-plus" href="/quality-checks/coherence-score">
-    Easily bring your survey data into ReDem by manually uploading it through the ReDem Application!
+    The Coherence Score (CS) leverages AI to evaluate the logical consistency, plausibility, and overall coherence of respondent behavior across the entire interview.
   </Card>
+
   <Card title="Time Score" icon="stopwatch" href="/quality-checks/time-score">
-    The ReDem tool tracks both the total interview time and the time spent on each question, automatically detecting when a participant’s speed deviates from the norm
+    The Time Score (TS) tracks overall interview duration and time spent on each question, automatically detecting deviations from normal response speeds.
   </Card>
+
   <Card title="Grid-Question Score" icon="list" href="/quality-checks/grid-question-score">
     The grid-question score evaluates respondents according to their response behavior within one or more matrix-questions
   </Card>
